--- a/src/styles.less
+++ b/src/styles.less
@@ -19,3 +19,16 @@ app-main {
   left: 0;
   right: 0;
 }
+
+
+button.mat-raised-button.mat-primary {
+  background-color: #30829e;
+}
+
+.mat-focused .mat-form-field-placeholder {
+  color: #30829e;
+}
+
+.mat-form-field-ripple {
+  background-color: #30829e;
+}
