--- a/src/app/favorites/main/main.component.html
+++ b/src/app/favorites/main/main.component.html
@@ -9,7 +9,7 @@
             </div>
             <div textWrapper>
               <label>Favorite websites</label>
-              <label class="counter">0</label>
+              <label class="counter">{{websitesCounter}}</label>
             </div>
           </a>
         </li>
@@ -20,7 +20,7 @@
             </div>
             <div textWrapper>
               <label>Actions log</label>
-              <label class="counter">0</label>
+              <label class="counter">{{actionLogsCounter}}</label>
             </div>
           </a>
         </li>
