--- a/src/app/favorites/main/main.component.less
+++ b/src/app/favorites/main/main.component.less
@@ -78,3 +78,30 @@
   }
 
 }
+
+//mat-toolbar {
+//  position: fixed;
+//  height: 56px;
+//  width: 100%;
+//  top: 0;
+//  background-color: blue;
+//  box-sizing: border-box;
+//}
+//
+//[contentWrapper] {
+//  box-sizing: border-box;
+//  background-color: green;
+//  position: absolute;
+//  top: 0px;
+//  margin-top: 56px;
+//
+//  width: 100%;
+//  overflow-x: hidden;
+//  overflow-y: auto;
+//}
+
+mat-toolbar {
+  button {
+    flex: 1;
+  }
+}
