--- a/src/styles.less
+++ b/src/styles.less
@@ -32,3 +32,13 @@ button.mat-raised-button.mat-primary {
 .mat-form-field-ripple {
   background-color: #30829e;
 }
+
+.mat-toolbar.mat-primary {
+  background-color: #66B2CF;
+}
+
+[mobile] {
+  .mat-row {
+    padding: 0px 8px;
+  }
+}
